Dividing males